# pyqt6-icon-theme

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: README.zh-TW.md  pypi_description.md
example/: main.py  style.py
pyqt6_icon_theme/: __init__.py  core.py
tests/: conftest.py  test_button.py  test_manager.py  test_utils.py
