[project]
name = "pyqt6-icon-theme"
version = "0.1.5"
description = "Dynamic SVG icon theming tool for PyQt6"
authors = [
    {name = "JW5123",email = "Jay2002714@gmail.com"}
]
readme = {file = "doc/pypi_description.md", "content-type" = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "pyqt6>=6.6",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-qt (>=4.5.0,<5.0.0)"
]
license = "MIT"

keywords = ["pyqt6", "qt", "icon", "svg", "theme", "theming", "ui"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces"
]

[project.urls]
Homepage = "https://github.com/JW5123/pyqt6-icon-theme"
Repository = "https://github.com/JW5123/pyqt6-icon-theme"
Issues = "https://github.com/JW5123/pyqt6-icon-theme/issues"

[tool.poetry]
packages = [{include = "pyqt6_icon_theme"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
